[package]
name = "twitch-archive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-process = "1.6.0"
futures = "0.3.25"
tide = "0.16.0"
surf = "2.3.2"
serde = "1.0.150"
serde_json = { version = "1.0.89", features = ["raw_value"] }
log = "0.4.17"
env_logger = "0.10.0"
ngrok = "0.6.0"
url = "2.3.1"