[package]
name = "twitch-archive"
version = "0.6.2-beta+build.26"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
async-process = "1.6"
futures = "0.3"
tide = "0.16"
surf = "2.3"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4"
env_logger = "0.10"
ngrok = "0.6"
url = "2.3"
async-once-cell = "0.4"
sanitize-filename = "0.4"
atomic = "0.5"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
twitchchat = { version = "0.14", features = ["async", "async-std", "async-tls"] }
rand = "0.8"
async-tar = "0.4"
